objects/DMAPP__DM_Opportunity_Contact_Extra__c.object
<CustomObject>
    <description>DEPRECATED - DO NOT USE</description>
    <fields>
        <fullName>DMAPP__Adaptability__c</fullName>
        <label>Adaptability</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Laggard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visionary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DM_Opportunity_Contact_Extras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Coverage__c</fullName>
        <label>Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brief contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-depth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DJH_Test__c</fullName>
        <label>DJH Test</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Key_Player__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>DM_Opportunity_Contact_Extras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political__c</fullName>
        <label>Political</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Circle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy__c</fullName>
        <formula>&quot;XXX&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goto User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DM_Opportunity_Contact_Extras</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ DM Opportunity Contact Extra</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DM Opportunity Contact Extra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Opportunity Contact Extras</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>